--- a/package.json
+++ b/package.json
@@ -9,9 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "@langchain/community": "^0.3.0",
+    "@langchain/core": "^0.3.58",
+    "@langchain/langgraph": "^0.2.0",
+    "@langchain/openai": "^0.3.17",
+    "@supabase/ssr": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "@tiptap/extension-highlight": "^3.13.0",
+    "@tiptap/extension-link": "^2.6.0",
+    "@tiptap/extension-placeholder": "^2.6.0",
+    "@tiptap/extension-typography": "^3.13.0",
+    "@tiptap/react": "^2.6.0",
+    "@tiptap/starter-kit": "^2.6.0",
+    "ai": "^3.4.0",
+    "clsx": "^2.1.1",
+    "next": "^14.2.0",
+    "openai": "^6.10.0",
+    "react": "^18.3.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -21,6 +38,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "shadcn": "^3.5.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
