--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.86",
     "@langchain/community": "^0.3.0",
     "@langchain/core": "^0.3.58",
     "@langchain/langgraph": "^0.2.0",
