--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/starter-kit": "^2.6.0",
     "ai": "^5.0.114",
     "clsx": "^2.1.1",
+    "eventsource-parser": "^3.0.6",
     "next": "^14.2.0",
     "openai": "^6.10.0",
     "react": "^18.3.0",
