--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ai": "^5.0.114",
     "clsx": "^2.1.1",
     "eventsource-parser": "^3.0.6",
+    "lucide-react": "^0.561.0",
     "next": "^14.2.0",
     "openai": "^6.10.0",
     "react": "^18.3.0",
