--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eventsource-parser": "^3.0.6",
     "lucide-react": "^0.561.0",
     "next": "^14.2.0",
+    "next-themes": "^0.4.6",
     "openai": "^6.10.0",
     "react": "^18.3.0",
     "tailwind-merge": "^3.4.0",
