--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@langchain/openai": "^0.3.17",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.0",
+    "@tiptap/extension-code-block-lowlight": "^2.27.1",
     "@tiptap/extension-highlight": "^2.27.1",
     "@tiptap/extension-image": "^2.27.1",
     "@tiptap/extension-link": "^2.6.0",
     "@tiptap/extension-placeholder": "^2.6.0",
+    "@tiptap/extension-table": "^2.27.1",
+    "@tiptap/extension-table-cell": "^2.27.1",
+    "@tiptap/extension-table-header": "^2.27.1",
+    "@tiptap/extension-table-row": "^2.27.1",
     "@tiptap/extension-typography": "^2.27.1",
     "@tiptap/extension-underline": "^2.27.1",
     "@tiptap/react": "^2.6.0",
@@ -31,6 +36,7 @@
     "ai": "^5.0.114",
     "clsx": "^2.1.1",
     "eventsource-parser": "^3.0.6",
+    "lowlight": "^2.9.0",
     "lucide-react": "^0.561.0",
     "next": "^14.2.0",
     "next-themes": "^0.4.6",
@@ -52,11 +58,13 @@
     "@vitest/coverage-v8": "^4.0.15",
     "@vitest/ui": "^4.0.15",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "jsdom": "^27.3.0",
     "shadcn": "^3.5.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5",
     "vitest": "^4.0.15"
   }
